Updated content. Added support for web terminal. Started chapter on using Che in Java labs

--- a/common-cli.adoc
+++ b/common-cli.adoc
@@ -1,6 +1,4 @@
-## Lab: Installing the OpenShift CLI
-
-### Command Line Interface
+== Command Line Interface
 
 OpenShift ships with a feature rich web console as well as command line tools
 to provide users with a nice interface to work with applications deployed to the
@@ -30,7 +28,7 @@ If the `oc` doesn't exist or you have an older version of the OpenShift CLI, fol
 the next sections to install or update the OpenShift CLI. Otherwise, skip to the
 next lab.
 
-#### Download and Install OpenShift CLI on Windows
+== Download and Install OpenShift CLI on Windows
 
 Download the the OpenShift CLI tool for link:{{DOWNLOAD_CLIENT_WINDOWS}}[Microsoft Windows]
 
@@ -79,7 +77,7 @@ You should see the following (or something similar):
 If you get an error message, you have not updated your path correctly. If you
 need help, raise your hand and the instructor will assist.
 
-#### Download and Install OpenShift CLI on Linux
+== Download and Install OpenShift CLI on Linux
 
 Download the the OpenShift CLI tool for link:{{DOWNLOAD_CLIENT_LIN64}}[Linux 64]
 
@@ -129,7 +127,7 @@ You should see the following (or something similar):
 If you get an error message, you have not updated your path correctly. If you
 need help, raise your hand and the instructor will assist.
 
-#### Download and Install OpenShift CLI on Mac
+== Download and Install OpenShift CLI on Mac
 
 Download the the OpenShift CLI tool for link:{{DOWNLOAD_CLIENT_MAC}}[Mac]
 
@@ -181,11 +179,11 @@ If you get an error message, you have not updated your path correctly. If you
 need help, raise your hand and the instructor will assist.
 
 
-#### Tab Completion 
+== Tab Completion 
 
 The OpenShift command line tool supports the ability to use tab completion for the popular zsh and bash shells.  This suits the needs of users using either Linux or OS X.  If you are using Microsoft Windows, never fear, we will discuss some ways to get tab completion working on that operating system as well.
 
-##### Tab completion on Mac and Linux
+=== Tab completion on Mac and Linux
 
 If you are on the Mac operating system, you will need to ensure that you have the *bash-completion* project installed. This can be accomplished using the popular brew system:
 
@@ -215,13 +213,13 @@ $ source <(oc completion zsh)
 
 Alternatively, you can add this to your .zshrc file.
 
-##### Tab completion on Windows
+=== Tab completion on Windows
 
 For Windows users, things become a bit more tricky.  You could of course use the Linux Subsystem for Windows but you may want to consider using a combination of babun and cmder.  For a full list of instructions, you can check out the following blog post:
 
 -  https://blog.openshift.com/openshift-3-tab-completion-for-windows/[https://blog.openshift.com/openshift-3-tab-completion-for-windows/]
 
-#### Working with proxies
+== Working with proxies
 It might happen that you're behind a corporate proxy to access the internet. In this case, you'll need to set
 some additional environment variables for the oc command line to work.
 
