--- a/parksmap-rsh.adoc
+++ b/parksmap-rsh.adoc
@@ -1,14 +1,10 @@
-## Lab: Access your pod remotely
-
-### Background
-
 Containers are treated as immutable infrastructure and therefore it is generally
 not recommended to modify the content of a container through SSH or running custom
 commands inside the container. Nevertheless, in some use-cases, such as debugging
 an application, it might be beneficial to get into a container and inspect the
 application.
 
-#### Exercise: Remote Shell Session to a Container Using the CLI
+== Exercise: Remote Shell Session to a Container Using the CLI
 
 OpenShift allows establishing remote shell sessions to a container without the
 need to run an SSH service inside each container. In order to establish an
@@ -58,7 +54,7 @@ $ ls /
 anaconda-post.log  bin  dev  etc  home  lib  lib64  lost+found  media  mnt  opt  parksmap.jar  proc  root  run  sbin  srv  sys  tmp  usr  var
 ----
 
-#### Exercise: Remote Shell Session to a Container Using the Web Console
+== Exercise: Remote Shell Session to a Container Using the Web Console
 
 The OpenShift Web Console also provides a convenient way to access a terminal session on the container without having to use the CLI.
 
@@ -74,7 +70,7 @@ image::parksmap-rsh-applications-pods-terminal.png[Pod List]
 Pretty nifty!  Go ahead and execute the same commands you did when using the CLI to see how the Web Console based terminal behaves.
 
 
-#### Exercise: Execute a Command in a Container
+== Exercise: Execute a Command in a Container
 
 In addition to remote shell, it is also possible to run a command remotely in an
 already running container using the `oc exec` command. This does not require
